fix: project name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   api:
     build: .
-    container_name: fastify-cjs
+    container_name: fastify-cjs-ui
     ports:
       - '8080:8080'
     environment:
